--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
 </head>
 <body>
     
+    <nav class="nav">
+        <div class="container">
+            <ul>
+                <h1 class="logo"><a href="#" class="current">Home</a></h1>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="hero">
+        <div class="container">
+            <h1>Welcome to My Website</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis laudantium veniam, expedita minus deleniti corporis quo fugit doloremque quam dolore ipsum tenetur adipisci voluptates corrupti reiciendis animi, eos quas. Numquam!</p>
+        </div>
+    </div>
+
+    <section class="container content">
+        <h2>Content One</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos aliquid sed accusantium deleniti saepe molestiae, ipsum recusandae ipsam, deserunt facilis inventore, quasi fugiat! Sequi itaque recusandae neque, delectus beatae iusto?</p>
+
+        <h3>Content Two</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam illo quibusdam sunt recusandae, praesentium atque odit at necessitatibus consectetur nesciunt cupiditate quam, possimus modi autem minima enim corporis doloremque cumque!</p>
+    </section>
 
     <script src="app.js"></script>
 </body>
